--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,6 @@
 .home{
     display: flex;
-    background-color: #ececec;
+    background-color: purple;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -24,12 +24,21 @@
             justify-content: center;
             font-family: 'Courier New', Courier, monospace;
             
+            a{
+                text-decoration: none;
+                color: inherit;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
             .initial{
                 font-size: 64px;
             }
 
             hr{
                 width: 100%;
+                color: #fff;
             }
         }
     }
